small config changes

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://fabgilson.bitbucket.org"
+baseURL = "https://fabgilson.github.io"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Fabian Gilson's website"
