added some details on seng406, link to mde4asd's gitlab and latest publi

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-anatole-fork"]
 	path = themes/hugo-anatole-fork
 	url = https://github.com/fabgilson/hugo-anatole-fork
+[submodule "hugo-anatole-fork"]
+	path = hugo-anatole-fork
+	url = git@github.com:fabgilson/hugo-anatole-fork.git
