--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-public/
 *.class
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -86,3 +85,4 @@ source_gen.caches/
 
 # generated hugo files
 public/
+*.lock
