added missing papers since 2022ish

--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,7 @@ google_fonts = [
 
 ## Social links
 [[params.socialIcons]]
-icon = "fab fa-twitter"
+icon = "fa-brands fa-x-twitter"
 title = "Twitter"
 url = "https://twitter.com/FabGilson/"
 
@@ -82,7 +82,7 @@ url = "https://orcid.org/0000-0002-1465-3315"
 [[params.socialIcons]]
 icon = "fa-id-card"
 title = "University of Canterbury's webpage"
-url = "https://www.canterbury.ac.nz/engineering/contact-us/people/fabian-gilson.html"
+url = "https://profiles.canterbury.ac.nz/Fabian-Gilson"
 
 ## Menu items
 
