--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,7 @@ google_fonts = [
 
 ## Social links
 [[params.socialIcons]]
-icon = "fa-brands fa-x-twitter"
+icon = "fab fa-twitter"
 title = "Twitter"
 url = "https://twitter.com/FabGilson/"
 
